@@ -3,7 +3,8 @@ Section: net
 Priority: optional
 Maintainer: Torsten Werner <twerner@debian.org>
 Standards-Version: 3.8.0
-Build-Depends: debhelper (>= 5), cdbs, python-support, python-all-dev
+Build-Depends: debhelper (>= 5), cdbs, python-support, python-all-dev,
+ libcap2-dev
 
 Package: immunity
 Architecture: any
