@@ -2,6 +2,7 @@
 #include <sched.h>
 #include <sys/mount.h>
 #include <linux/fs.h>
+#include <sys/capability.h>
 
 static PyObject* unshare_newns(PyObject *self, PyObject *args);
 
@@ -86,12 +87,41 @@ PyObject* do_mount_move(PyObject *self, PyObject *args)
   return Py_None;
 }
 
+static PyObject* do_set_cap(PyObject *self, PyObject *args);
+
+PyObject* do_set_cap(PyObject *self, PyObject *args)
+{
+  const char *cap_text;
+  cap_t caps;
+
+  if (!PyArg_ParseTuple(args, "s", &cap_text)) {
+    return NULL;
+  }
+  caps = cap_from_text(cap_text);
+  if (!caps) {
+    PyErr_SetFromErrno(ImmunityException);
+    return NULL;
+  }
+  if (cap_set_proc(caps) == -1) {
+    PyErr_SetFromErrno(ImmunityException);
+    return NULL;
+  }
+  if (cap_free(caps)) {
+    PyErr_SetFromErrno(ImmunityException);
+    return NULL;
+  }
+
+  Py_INCREF(Py_None);
+  return Py_None;
+}
+
 static PyMethodDef ImmunityMethods[] = {
   {"unshare_newns",  unshare_newns, METH_VARARGS, "unshare(newns)"},
   {"umount",  do_umount, METH_VARARGS, "umount"},
   {"mount",  do_mount, METH_VARARGS, "mount"},
   {"mount_bind",  do_mount_bind, METH_VARARGS, "mount(,,,MS_BIND,)"},
   {"mount_move",  do_mount_move, METH_VARARGS, "mount(,,,MS_MOVE,)"},
+  {"set_cap",  do_set_cap, METH_VARARGS, "set_cap"},
   {NULL, NULL, 0, NULL}        /* Sentinel */
 };
 
