@@ -2,11 +2,12 @@
 
 from distutils.core import setup, Extension
 
-module1 = Extension('immunity',
-                    sources = ['immunity.c'])
+immunity_module = Extension('immunity',
+                            sources   = ['immunity.c'],
+		            libraries = ['cap'])
 
-setup (name = 'Immunity',
-       version = '0.1',
+setup (name        = 'Immunity',
+       version     = '0.1',
        description = 'immunity python helper',
-       ext_modules = [module1])
+       ext_modules = [immunity_module])
 
