@@ -5,8 +5,9 @@ immunity (0.2) UNRELEASED; urgency=low
   * Secure other filesystems (/tmp, /var/tmp, /dev).
   * Allow executing user specified command.
   * Change default command to /bin/sh.
+  * Add capability support.
 
- -- Torsten Werner <twerner@debian.org>  Sun, 15 Mar 2009 12:18:07 +0100
+ -- Torsten Werner <twerner@debian.org>  Sun, 15 Mar 2009 13:36:27 +0100
 
 immunity (0.1) experimental; urgency=low
 
